# Mathema

./: CMakeLists.txt  README.md
include/: arithmetic.hpp  mathemax.hpp
tests/: test1.cpp
